--- a/Eligibility Portal/myproject/myapp/templates/userhome.html
+++ b/Eligibility Portal/myproject/myapp/templates/userhome.html
@@ -3,7 +3,7 @@
 {%block content%}
 
 <div class="container-fluid" style="text-align: center;" >
-<h1 style="text-align: center;color: greenyellow;margin-top: 120px;" >Wellcome {{user.name}}</h1>
+<h1 style="text-align: center;color: greenyellow;margin-top: 120px;" >Welcome {{user.name}}</h1>
 <h3 style="text-align: left;margin-top: 50px;" ><strong>INSTRUCTIONS</strong></h3>
 <h5 style="text-align: left;margin-top: 30px;" > &#8226; There are total 50 questions (25 Aptitute + 25 Technical)</h5>
 <h5 style="text-align: left;" > &#8226; Each question carries <strong style="color: red;">Two</strong> marks. No negative marking for wrong answers</h5>
